// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render Disabled input 1`] = `
<div>
  <div
    class="input "
  >
    <input
      class="input__field "
      disabled=""
      readonly=""
      type="input"
      value="Initial value"
    />
  </div>
</div>
`;

exports[`Input should render Input with custom className values 1`] = `
<div>
  <div
    class="input custom-class-name "
  >
    <input
      class="input__field custom-class-name"
      readonly=""
      type="search"
      value="Value"
    />
  </div>
</div>
`;

exports[`Input should render Input with icon 1`] = `
<div>
  <div
    class="input input--with-icon"
  >
    <div
      class="icon icon--angle "
    />
    <input
      class="input__field "
      readonly=""
      type="input"
      value="Value"
    />
  </div>
</div>
`;

exports[`Input should render Input with initial value 1`] = `
<div>
  <div
    class="input "
  >
    <input
      class="input__field "
      readonly=""
      type="input"
      value="Initial value"
    />
  </div>
</div>
`;

exports[`Input should render Input with placeholder 1`] = `
<div>
  <div
    class="input "
  >
    <input
      class="input__field "
      placeholder="Placeholder"
      readonly=""
      type="input"
    />
  </div>
</div>
`;
